# llamacpp-embedder

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile-server  Makefile  README.md  embedder.cpp  embedder.h  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  installation_trouble.yaml
.github/workflows/: build-binaries-linux.yml  build-binaries-macos.yml  build-binaries-windows.yml  build-static-linux.yml  build-static-macos.yml  build-static-windows.yml  build.yml  go-test.yml  go_test.yaml  library-test.yml  library_test.yml  node-test.yml  python-test.yml  release-go.yml  release-python.yml  release-server.yml  server-test.yml
bindings/go/: .gitignore  README.md  download_utils.go  download_utils_test.go  go.mod  llama_embedder.go  llama_embedder_test.go  utils.go  wrapper.cpp  wrapper.h
bindings/node/: binding.gyp  llama_embedder.cpp  llama_embedder.js  package-lock.json  package.json  test.js
bindings/python/: MANIFEST.in  README.md  bindings.cpp  pyproject.toml  setup.py
bindings/python/legacy/: setup.py
bindings/python/llama_embedder/: __init__.py
bindings/python/tests/test/: test_basic.py  test_py_wrapper.py
bindings/python/wheelhouse/: llama_embedder-0.0.1-cp311-cp311-macosx_11_0_arm64.whl
go-commons/: go.mod
server/: .dockerignore  .gitignore  Makefile  README.md  go.mod  main.go  wrapper.cpp
server/cmd/server/: main.go
server/internal/api/: handlers.go  handlers_test.go
server/internal/cache/: cache.go
server/internal/embedder/: embedder.go  embedder_test.go  wrapper.cpp  wrapper.h
server/internal/middleware/: caching.go
server/internal/types/: types.go
server/internal/utils/: cache.go  cache_test.go  download_utils.go  download_utils_test.go
server/internal/worker/: pool.go
server/scripts/: ptest.sh
src/: embedder.cpp  embedder.h
test/cpp/: test_embedder.cpp  test_embedder.h
